--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -755,9 +755,9 @@ The concept of coercion is a very important one. Watching the video, we learned 
 
 As we've discussed in earlier questions, there are numeric and character vectors. The character vectors are placed in quotes and the numerics are not. 
 
-We can avoid issues with coercion in R by changing characters to numerics and vice-versa. This is known as typecasting. The code, `as.numeric(x)` helps us convert character strings to numbers. There is an equivalent function that converts its argument to a string, `as.character(x)`.
+We can avoid issues with coercion in R by changing characters to numerics and vice-versa. This is known as typecasting. The function `as.numeric(x)` helps us convert character strings to numbers. There is an equivalent function that converts its argument to a string, `as.character(x)`.
 
-Let's practice doing this!
+In this exercise, we will practice these conversions!
 
 `@instructions`
 - Define the following vector:
@@ -767,11 +767,11 @@ x <- c(1, 3, 5,"a")
 ```
 
 - Notice that `x` has been coerced into a character string.
-- If we assign something new to a vector that we've already created, the new definition replaces whatever was previously assigned to the vector.
-	- Convert `x` to a vector of numbers using the `as.numeric()` function. (Note that you will get a warning message, but that is okay!)
+- You can change the definition of a variable that has already been created by assigning the new definition to the existing variable name.
+	- Use the `as.numeric()` function to redefine (convert) `x` to a vector of numbers instead of a vector of characters. (Note that you will get a warning message, but that is okay!)
 
 `@hint`
-Make sure you put the numbers within "".
+To update the definition of a vector that you've already created, use code like `x <- ___`.
 
 `@pre_exercise_code`
 ```{r}
@@ -783,11 +783,11 @@ Make sure you put the numbers within "".
 # Define the vector x
 x <- c(1, 3, 5,"a")
 
-# Note that the x is character vector
+# Note that x is a character vector
 x
 
-# Redefine `x` to typecast it to get an integer vector using `as.numeric`.
-# You will get a warning but that is okay
+# Use `as.numeric()` to redefine `x` as a numeric vector
+# You will get a warning but that is okay!
 
 ```
 
@@ -796,10 +796,11 @@ x
 # Define the vector x
 x <- c(1, 3, 5,"a")
 
-# Note that the x is character vector
+# Note that x is a character vector
 x
 
-# Use `as.numeric` to coerce `x` to a numeric vector. Be sure to reassign the new vector as `x`.
+# Use `as.numeric()` to redefine `x` as a numeric vector
+# You will get a warning but that is okay!
 x <- as.numeric(x)
 
 ```
