indexing in updates UserId: 597405

--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -425,7 +425,7 @@ data(murders)
 # Store the 5 abbreviations in `abbs`. (remember that they are character vectors)
 
 
-# Use the %in% command to check if the entries of abbs are abbreviations in the the murders data frame
+# Use the %in% command to check if the entries of abbs are abbreviations in the murders data frame
 
 ```
 
@@ -434,7 +434,7 @@ data(murders)
 # Store the 5 abbreviations in abbs. (remember that they are character vectors)
 abbs <- c("MA", "ME", "MI", "MO", "MU") 
 
-# Use the %in% command to check if the entries of abbs are abbreviations in the the murders data frame
+# Use the %in% command to check if the entries of abbs are abbreviations in the murders data frame
 abbs%in%murders$abb
 
 ```
